 * Unit substitutions can be used as the destination for a whisper text output.
 * You can right-click-drag icons anywhere on screen to anchor them to any mouse enabled frame, or to move an icon into a new group.
 * Added a setting to disable new version warnings.
 * It is now easier to delete old groups.
 * Added substitutions "%d" for duration and "%k" for stacks.
 * Bug Fixes:
 ** (r316) TellMeWhen_Options.lua:2831: attempt to index local "spaceControl" (a nil value)
 ** (r321) The runic power condition should now properly track runic power instead of mana.
 ** (r324) Meta icons should once again properly inherit colors from Masque.
 ** (r327) TellMeWhen_Options.lua line 3189: attempt to call method 'IsVisible' (a nil value)
 
===v4.6.7===
 * Bug Fixes:
 ** (r310) Fixed sound event text overflow bug
 ** (r311) Possibly fixed a bug that was causing the event settings of deleted groups to stick around
 ** (r312) Added Sudden Death/Colossus Smash to the cooldown reset tracker for Unit Cooldown icons
 ** (r313) TellMeWhen will no longer completely break when loading with ButtonFacade but not Masque installed
 
===v4.6.6===
 * The suggestion list has been completely rewritten, and many features have been added.
 * Seeing as Masque has been out for a month now, I think it is safe to say that ButtonFacade is now obsolete. Removed all support for ButtonFacade
 * Added a setting to make events only fire if the icon is shown.
 * Bug Fixes:
 ** (r300) default.lua:67: attempt to index local 'ics' (a nil value)
 ** (r301) TellMeWhen_Options-4.6.4.lua:5575 bad argument #1 to "pairs" (table expected, got nil)
 ** (r302) You can now properly undo a change in sound file
 ** (r302) TellMeWhen-4.6.6.lua:2259: bad argument #3 to "format" (number expected, got nil)
 ** (r302) TellMeWhen-4.6.6.lua:192: attempt to compare nil with number
 ** (r304) Fixed various bugs relating to inserting text into strings with multibyte characters (zhCN, zhTW, koKR, ruRU)