@@ -73,9 +73,9 @@ Type.RelevantSettings = {
 }
 
 
-function Type:Update()
+function Type:Update(upd_intv)
 	db = TMW.db
-	UPD_INTV = db.profile.Interval
+	UPD_INTV = upd_intv
 	ClockGCD = db.profile.ClockGCD
 	EFF_THR = db.profile.EffThreshold
 	rc = db.profile.OORColor
