@@ -58,13 +58,15 @@ Type.DisabledEvents = {
 	OnUnit = true,
 }
 
-function Type:Update()
+function Type:Update(upd_intv)
 	db = TMW.db
-	UPD_INTV = db.profile.Interval
+	UPD_INTV = upd_intv
 end
 
 local function ConditionIcon_OnUpdate(icon, time)
+	print "CALL"
 	if icon.LastUpdate <= time - UPD_INTV then
+		print "RUN"
 		icon.LastUpdate = time
 		local CndtCheck = icon.CndtCheck
 		if CndtCheck then
