@@ -6,11 +6,14 @@
  * Added a setting to disable new version warnings.
  * It is now easier to delete old groups.
  * Added substitutions "%d" for duration and "%k" for stacks.
+ * Performance Increase: Icons should no longer update themselves multiple times within one update period when the update interval is set to zero and the icon is being checked by multiple metas/conditions.
  * Bug Fixes:
  ** (r316) TellMeWhen_Options.lua:2831: attempt to index local "spaceControl" (a nil value)
  ** (r321) The runic power condition should now properly track runic power instead of mana.
  ** (r324) Meta icons should once again properly inherit colors from Masque.
  ** (r327) TellMeWhen_Options.lua line 3189: attempt to call method 'IsVisible' (a nil value)
+ ** (r328) It should no longer be possible to have an icon shown condition check the icon that it is a child of.
+ ** (r328) Switching profiles while TMW is unlocked should no longer cause icon coloring to malfunction.
  
 ===v4.6.7===
  * Bug Fixes:
